# routes/index.js
@@ -4,10 +4,6 @@ const passport = require('passport');
 
 router.use('/', require('./swagger'));
 
-router.get('/', (req, res) => {
-    //#swagger.tags=['Welcome']
-    res.send('Welcome to my gaming laptop and dream car wishlists :)');
-})
 router.use('/vehicles', require('./vehicles'));
 router.use('/laptops', require('./laptops'));
 
